--- a/app/src/main/res/layout/activity_kelembapan.xml
+++ b/app/src/main/res/layout/activity_kelembapan.xml
@@ -28,7 +28,7 @@
             android:inputType="date"
             android:text="Senin, 01 Januari 2020"
             android:textColor="#FFFFFF"
-            android:textSize="24dp"
+            android:textSize="22sp"
             android:fontFamily="@font/preg"/>
 
         <TextView
@@ -36,9 +36,9 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:inputType="time"
-            android:text="07.00"
+            android:text="07:00.00"
             android:textColor="#FFFFFF"
-            android:textSize="24dp"
+            android:textSize="22sp"
             android:fontFamily="@font/preg"/>
     </LinearLayout>
 
@@ -97,7 +97,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
-                        android:text="10.00"
+                        android:inputType="time"
+                        android:text="10:00.00"
                         android:textColor="#FFFFFF"
                         android:gravity="center"
                         android:textSize="22sp"
