--- a/app/src/main/res/layout/activity_suhu.xml
+++ b/app/src/main/res/layout/activity_suhu.xml
@@ -60,38 +60,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="23C"
+            android:text="23°C"
             android:textColor="#000000"
             android:textSize="60sp"
             android:textStyle="bold"
             android:fontFamily="@font/preg"/>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/orange_rounded_top"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
 
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:ems="10"
-                    android:inputType="date"
-                    android:text="Senin, 01 Januari 2020"
-                    android:textColor="#FFFFFF"
-                    android:textSize="21sp"
-                    android:fontFamily="@font/preg"/>
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/list_suhu"
+                    android:id="@+id/rv_suhu"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                 </androidx.recyclerview.widget.RecyclerView>
@@ -99,8 +77,5 @@
 
 
 
-            </TableLayout>
-        </RelativeLayout>
-      </ScrollView>
     </LinearLayout>
 </LinearLayout>
