--- a/app/src/main/res/layout/item_suhu.xml
+++ b/app/src/main/res/layout/item_suhu.xml
@@ -1,35 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FF934F"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
                 <TextView
                     android:id="@+id/txt_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:layout_weight="2"
                     android:inputType="time"
-                    android:text="10:00:00"
-                    android:textColor="@color/black"
+                    android:textColor="#FFFFFF"
                     android:gravity="center"
                     android:textSize="22sp"
                     android:fontFamily="@font/preg"/>
                 <TextView
+                    android:layout_marginTop="10dp"
                     android:id="@+id/txt_temp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    android:text="23"
-                    android:textColor="@color/black"
+                    android:textColor="#FFFFFF"
                     android:gravity="center"
                     android:textSize="22sp"
                     android:fontFamily="@font/preg"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:src="@drawable/ic_hose" />
+        </LinearLayout>
 
-    </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
