--- a/app/src/main/res/layout/activity_kelembapan.xml
+++ b/app/src/main/res/layout/activity_kelembapan.xml
@@ -55,75 +55,50 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:src="@drawable/ic_speedometer" />
-
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:id="@+id/tv_hum"
+                android:textColor="#000000"
+                android:textSize="60sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/preg"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="%"
+                android:textColor="#000000"
+                android:textSize="60sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/preg"/>
+        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="93%"
-            android:textColor="#000000"
-            android:textSize="60sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/preg"/>
-
-
-       <ScrollView
-           android:layout_width="match_parent"
-           android:layout_height="match_parent">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:background="@drawable/orange_rounded_top"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
+            android:layout_marginRight="20dp"
+            android:gravity="center"
+            android:ems="12"
+            android:inputType="date"
+            android:text="Senin, 01 Januari 2020"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            android:fontFamily="@font/preg"/>
 
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:ems="10"
-                    android:inputType="date"
-                    android:text="Senin, 01 Januari 2020"
-                    android:textColor="#FFFFFF"
-                    android:textSize="25sp"
-                    android:fontFamily="@font/preg"/>
-                <TableRow
-                    android:background="#FF934F"
-                    android:padding="10dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:inputType="time"
-                        android:text="10:00.00"
-                        android:textColor="#FFFFFF"
-                        android:gravity="center"
-                        android:textSize="22sp"
-                        android:fontFamily="@font/preg"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:text="23"
-                        android:textColor="#FFFFFF"
-                        android:gravity="center"
-                        android:textSize="22sp"
-                        android:fontFamily="@font/preg"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_hum"
+            tools:listitem="@layout/item_hum"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </androidx.recyclerview.widget.RecyclerView>
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:src="@drawable/ic_hose" />
-                </TableRow>
-
-            </TableLayout>
-        </RelativeLayout>
-       </ScrollView>
     </LinearLayout>
 </LinearLayout>
