--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -31,6 +31,7 @@
                 android:textStyle="bold"
                 android:fontFamily="@font/preg"/>
             <TextView
+                android:id="@+id/tv_username"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="(Username)"
