--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,9 +22,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:gravity="center_horizontal"
-            android:text="Log In"
+            android:text="Masukkan Username"
             android:textColor="#FF934F"
-            android:textSize="60sp"
+            android:textSize="45sp"
             android:textStyle="bold"
             android:fontFamily="@font/preg"/>
 
@@ -45,12 +45,11 @@
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginRight="30dp"
                 android:gravity="center"
                 android:hint="Username"
                 android:textColorHint="#FFFFFF"
                 android:textColor="#FFFFFF"
-                android:textSize="28dp"
+                android:textSize="28sp"
                 android:maxLines="1"
                 android:lines="1"
                 android:fontFamily="@font/preg"/>
@@ -86,7 +85,7 @@
                 android:gravity="center"
                 android:text="Tidak memiliki akun? Klik di sini"
                 android:textColor="#FF934F"
-                android:textSize="20sp" />
+                android:textSize="23sp" />
 
             <ProgressBar
                 android:id="@+id/progressBar"
