--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -11,7 +11,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
         android:orientation="horizontal">
         <ImageView
             android:layout_width="100dp"
@@ -21,6 +20,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
@@ -40,6 +40,13 @@
                 android:textStyle="bold"
                 android:fontFamily="@font/preg"/>
         </LinearLayout>
+        <ImageView
+            android:id="@+id/img_off"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_off" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
