--- a/app/src/main/res/layout/activity_suhu.xml
+++ b/app/src/main/res/layout/activity_suhu.xml
@@ -22,23 +22,25 @@
         android:orientation="horizontal"
         android:layout_margin="20dp">
         <TextView
+            android:id="@+id/tv_date"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:ems="8"
             android:inputType="date"
             android:text="Senin, 01 Januari 2020"
             android:textColor="#FFFFFF"
-            android:textSize="22sp"
+            android:textSize="23sp"
             android:fontFamily="@font/preg"/>
 
         <TextView
+            android:id="@+id/tv_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
             android:inputType="time"
             android:text="07:00.00"
             android:textColor="#FFFFFF"
-            android:textSize="22sp"
+            android:textSize="23sp"
             android:fontFamily="@font/preg"/>
     </LinearLayout>
 
@@ -80,6 +82,7 @@
                 android:fontFamily="@font/preg"/>
         </LinearLayout>
         <TextView
+            android:id="@+id/tv_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/orange_rounded_top"
@@ -93,12 +96,15 @@
             android:textSize="25sp"
             android:fontFamily="@font/preg"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_suhu"
-            tools:listitem="@layout/item_suhu"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </androidx.recyclerview.widget.RecyclerView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_suhu"
+                tools:listitem="@layout/item_suhu"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </androidx.recyclerview.widget.RecyclerView>
+
+
 
     </LinearLayout>
 </LinearLayout>
