--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,10 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="95dp"
         android:layout_marginRight="25dp"
-        android:layout_marginBottom="25dp"
-        android:background="@drawable/soft_orange_rounded_full"
+        android:background="@drawable/soft_orange_rounded_top"
         android:orientation="vertical">
 
         <TextView
@@ -36,10 +35,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:gravity="center_horizontal"
                 android:text="Masukkan"
                 android:textColor="#FF934F"
-                android:textSize="33sp"
+                android:textSize="35sp"
                 android:textStyle="bold"
                 android:fontFamily="@font/preg"/>
             <TextView
@@ -48,7 +48,7 @@
                 android:gravity="center_horizontal"
                 android:text="Nomor Handphone"
                 android:textColor="#FF934F"
-                android:textSize="33sp"
+                android:textSize="35sp"
                 android:textStyle="bold"
                 android:fontFamily="@font/preg"/>
 
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="25dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/orange_rounded_full"
             android:orientation="horizontal">
@@ -77,7 +77,7 @@
                 android:maxLength="15"
                 android:textColorHint="#FFFFFF"
                 android:textColor="#FFFFFF"
-                android:textSize="28sp"
+                android:textSize="30sp"
                 android:maxLines="1"
                 android:lines="1"
                 android:fontFamily="@font/preg"/>
@@ -86,7 +86,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="50dp"
+            android:gravity="bottom"
             android:orientation="vertical">
 
             <Button
