--- a/app/src/main/res/layout/activity_o_t_p.xml
+++ b/app/src/main/res/layout/activity_o_t_p.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -66,7 +65,7 @@
                 android:background="@drawable/orange_rounded_full"
                 android:maxLength="1"
                 android:textColor="#FFFFFF"
-                android:textSize="26dp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:fontFamily="@font/preg"
@@ -82,7 +81,7 @@
                 android:background="@drawable/orange_rounded_full"
                 android:maxLength="1"
                 android:textColor="#FFFFFF"
-                android:textSize="26dp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:fontFamily="@font/preg"
@@ -98,7 +97,7 @@
                 android:background="@drawable/orange_rounded_full"
                 android:maxLength="1"
                 android:textColor="#FFFFFF"
-                android:textSize="26dp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:fontFamily="@font/preg"
@@ -114,7 +113,7 @@
                 android:background="@drawable/orange_rounded_full"
                 android:maxLength="1"
                 android:textColor="#FFFFFF"
-                android:textSize="26dp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:fontFamily="@font/preg"
@@ -130,7 +129,7 @@
                 android:background="@drawable/orange_rounded_full"
                 android:maxLength="1"
                 android:textColor="#FFFFFF"
-                android:textSize="26dp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:fontFamily="@font/preg"
@@ -146,11 +145,11 @@
                 android:background="@drawable/orange_rounded_full"
                 android:maxLength="1"
                 android:textColor="#FFFFFF"
-                android:textSize="26dp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:fontFamily="@font/preg"
-                android:imeOptions="actionNext"
+                android:imeOptions="actionDone"
                 android:importantForAutofill="no"
                 tools:ignore="LabelFor"/>
         </LinearLayout>
@@ -158,7 +157,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="100dp"
+            android:gravity="bottom"
             android:orientation="vertical">
             <Button
                 android:id="@+id/btn_otp"
