--- a/app/src/main/res/layout/activity_username.xml
+++ b/app/src/main/res/layout/activity_username.xml
@@ -32,7 +32,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="90dp"
+            android:layout_gravity="center"
             android:layout_marginRight="20dp"
             android:background="@drawable/orange_rounded_full"
             android:orientation="horizontal">
@@ -49,7 +50,7 @@
                 android:hint="Username"
                 android:textColorHint="#FFFFFF"
                 android:textColor="#FFFFFF"
-                android:textSize="28sp"
+                android:textSize="30sp"
                 android:maxLines="1"
                 android:lines="1"
                 android:fontFamily="@font/preg"/>
@@ -58,7 +59,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="190dp"
+            android:gravity="bottom"
             android:orientation="vertical">
 
             <Button
@@ -69,13 +70,15 @@
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:background="@drawable/button_background"
+                android:fontFamily="@font/preg"
+                android:paddingBottom="10dp"
                 android:text="Selesai"
                 android:textColor="#FFFFFF"
                 android:textSize="26dp"
-                android:textStyle="bold"
-                android:fontFamily="@font/preg"/>
+                android:textStyle="bold" />
 
             <ProgressBar
+                android:layout_marginTop="65dp"
                 android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyle"
                 android:layout_width="match_parent"
