--- a/app/src/main/res/layout/item_hum.xml
+++ b/app/src/main/res/layout/item_hum.xml
@@ -3,40 +3,45 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
-    <LinearLayout
+    android:layout_height="wrap_content">
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FF934F"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
-        <TextView
-            android:id="@+id/txt_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_weight="2"
-            android:inputType="time"
-            android:textColor="#FFFFFF"
-            android:gravity="center"
-            android:textSize="22sp"
-            android:fontFamily="@font/preg"/>
-        <TextView
-            android:layout_marginTop="10dp"
-            android:id="@+id/txt_hum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:textColor="#FFFFFF"
-            android:gravity="center"
-            android:textSize="22sp"
-            android:fontFamily="@font/preg"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:src="@drawable/ic_hose" />
-    </LinearLayout>
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FF934F"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
+            <TextView
+                android:id="@+id/txt_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="2"
+                android:inputType="time"
+                android:textColor="#FFFFFF"
+                android:gravity="center"
+                android:textSize="25sp"
+                android:fontFamily="@font/preg"/>
+            <TextView
+                android:layout_marginTop="10dp"
+                android:id="@+id/txt_hum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textColor="#FFFFFF"
+                android:gravity="center"
+                android:textSize="25sp"
+                android:fontFamily="@font/preg"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:src="@drawable/ic_hose" />
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
